--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -16,6 +16,7 @@
                 <div class="logo"><a href="{% url 'core:home' %}">ClearEar</a></div>
                 <ul class="nav-links">
                     <li><a href="{% url 'ear_training:chord_quality' %}">Play</a></li>
+                    <li><a href="{% url 'ear_training:help' %}">Help</a></li>
                     <li><a href="#">Dashboard</a></li>
                 </ul>
             </nav>
