--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -15,7 +15,7 @@
             <nav>
                 <div class="logo"><a href="{% url 'core:home' %}">ClearEar</a></div>
                 <ul class="nav-links">
-                    <li><a href="{% url 'ear_training:chord_quality' %}">Play</a></li>
+                    <li><a href="{% url 'ear_training:home' %}">Train</a></li>
                     <li><a href="{% url 'ear_training:help' %}">Help</a></li>
                     <li><a href="#">Dashboard</a></li>
                 </ul>
